# margot

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Containerfile  FEATURES.md  Makefile  RC2_TEST.md  RC3.md  RELEASE_NOTES_DRAFT.md  ROADMAP.md  TESTING.md  cliff.toml  pyproject.toml
.github/workflows/: ci.yml  release-check.yml  release.yml
.kiro/agents/: planner.json  python-dev.json
.kiro/specs/: logging-verbosity.md
.kiro/steering/: code-conventions.md  oci-media-types.md
src/margoctl/: main.py
src/margot/: config.py  console.py  main.py
src/margot/commands/: __init__.py  build.py  fetch.py  global_options.py  pull.py  version.py
src/margot/domain/: layers.py  metadata.py  models.py  tags.py  uri.py
src/margot/infra/: __init__.py  filesystem.py  oci.py
src/margot/services/: __init__.py  build.py  fetch.py  pull.py
tests/: conftest.py  test_smoke.py
tests/e2e/: test_build_cli.py  test_fetch_cli.py  test_pull_cli.py
tests/integration/: test_build.py  test_fetch_service.py  test_pull_service.py
tests/unit/: test_config.py  test_console.py  test_domain_layers.py  test_domain_models.py  test_domain_uri.py  test_filesystem.py  test_infra_oci.py  test_metadata.py  test_tags.py
