[project]
name = "margot"
dynamic = ["version"]
description = "Developer CLI for building and publishing Margo application packages"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.4",
    "rich>=14.0.0",
    "dynaconf>=3.2.10",
    "oras>=0.2.28",
]

[project.scripts]
margot = "margot.main:app"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=margot --cov-report=term-missing"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["src/margot"]

[tool.ruff]
target-version = "py312"
line-length = 130
lint.select = ["ALL"]
lint.ignore = ["D", "TD003", "FIX002"]
exclude = [".git", ".venv", "__pycache__"]
fix = true
