[project]
name = "margot"
dynamic = ["version"]
description = "Developer CLI for building and publishing Margo application packages"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.4",
    "rich>=14.0.0",
    "dynaconf>=3.2.10",
    "oras>=0.2.28",
]

[project.scripts]
margot = "margot.main:app"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=margot --cov-report=term-missing --cov-fail-under=90"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["src/margot"]

[tool.ruff]
target-version = "py312"
line-length = 130
fix = true
exclude = [".git", ".venv", "__pycache__"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # docs — not enforced at this stage
    "D",
    # todos — tracking only, no blocking
    "TD003",
    "FIX002",
    # Typer uses bool positional args as a pattern
    "FBT001",
    "FBT002",
    "FBT003",
    # inline exception messages are fine for a small CLI
    "EM101",
    "EM102",
    "TRY003",
    # formatter handles these; enabling both causes conflicts
    "COM812",
    "ISC001",
    # use selective imports everywhere; PT013 conflicts with this convention
    "PT013",
]

[tool.ruff.lint.isort]
known-first-party = ["margot"]
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
# ban relative imports — all imports must be absolute
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ANN",     # no annotation requirements in tests
    "PLR2004", # magic values are fine in test assertions
]
